--- a/compare.html
+++ b/compare.html
@@ -30,16 +30,145 @@
 <body>
 
   <header class="bg_color">
+    <section id="Topbar" class="">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+                <div class="topLeftContent d-flex">
+                    <div class="topber_lang text-white">
+                        <i class="fa-solid fa-globe"></i>
+                        <select class="text-white" aria-label="Default select example">
+                            <option selected>English</option>
+                            <option value="1">বাংলা</option>
+                            <option value="2">हिन्दी</option>
+                            <option value="3">中國人</option>
+                        </select>
+                    </div>
+                    <div class="contact_info">
+                        <i class="fa-regular fa-envelope"></i
+                        ><a href="mailto:contact@example.com">mizan@gmail.com</a>
+                    </div>
+                    <div class="topQuery">
+                        <i class="fa-regular fa-circle-question me-1"></i>
+                        <a href="#">Free Query</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="topRightContent d-flex">
+                    <a href="#"><i class="fa-solid fa-location-dot me-1"></i> Location </a>
+                    <a href="#"><i class="fa-solid fa-truck me-1"></i> Order Tracking </a>
+                    <a href="#"><i class="fa-solid fa-file-arrow-down me-1"></i> App Download </a>
+                    <div class="topber_usd text-white">
+                        <select class="text-white" aria-label="Default select example">
+                            <option selected>$ USD</option>
+                            <option value="1">টাকা</option>
+                            <option value="2">€ Uro</option>
+                        </select>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <section id="MidNavber" class="">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="midlogoSec d-flex">
+                    <div class="midLogo">
+                        <img src="assets/img/logo/midlogo.png" alt="" />
+                    </div>
+                    <div class="midNavCall d-flex">
+                        <i class="fa-solid fa-headphones"></i>
+                        <div class="midNavCallNo">
+                            <h6 class="text-warning">01755463304</h6>
+                            <p class="text-white">Free Call Support</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="midNavSrcCate d-flex">
+                    <div class="midNavCategory">
+                        <select class="text-muted" aria-label="Default select example">
+                            <option selected>All Category</option>
+                            <option value="1">Grocery</option>
+                            <option value="2">Fruits</option>
+                            <option value="3">Vegetable</option>
+                            <option value="3">Medecine</option>
+                            <option value="3">Electronics</option>
+                            <option value="3">Kids</option>
+                            <option value="3">Man</option>
+                            <option value="3">Owman</option>
+                        </select>
+                    </div>
+                    <div class="midNavSearch">
+                        <form class="d-flex midNav_search_border mb-4">
+                            <input class="me-2 midNav_search_field" type="search" placeholder="Search"
+                                aria-label="Search">
+                            <button class="btn btn-outline-success midNav_search_btn" type="submit"><i
+                                    class="fa-solid fa-magnifying-glass"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="midNavArrowLoveCart">
+                    <div class="midNavArrowLoveCartIcon d-flex">
+                        <div class="midNavArrowIcon">
+                            <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
+                        </div>
+                        <div class="midNavLoveIcon">
+                            <a href="#"><i class="fa-regular fa-heart"></i></a>
+                            <div class="midNavLovePoint">
+                                <p>5</p>
+                            </div>
+                        </div>
+                        <div class="midNavCrtIcon d-flex">
+                            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                            <span>
+                                <p>Cart</p>
+                                <h6>$85.00</h6>
+                            </span>
+                            <div class="midNavCartPoint">
+                                <p>5</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
     <section id="Menu" class="">
       <nav class="navbar navbar-expand-lg navbar-light bg_color">
           <div class="container">
               <div class="logo">
-                <a class="navbar-brand text-white cat_font res_large_device" href="#">SHOP BY CATEGORY
-                  <span> <i class="fa-solid fa-bars text-white ms-2"></i></span></a>
-                <div class="profile navbar-brand text-white res_small_device" >
-                  <a href="" class="text-white"> <i class="fa-solid fa-user"></i>
+                    <div class="dropdown">
+                        <div class="navbar-brand navColor cat_font res_large_device " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">SHOP BY CATEGORY
+                        <span><i class="fa-solid fa-bars navColor ms-2"></i></span></div>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                    <!-- mobile view -->
+                <div class="profile navbar-brand navColor res_small_device" >
+                  <a href="" class="navColor">
+                     <!-- <i class="fa-solid fa-user"></i> -->
+                <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                   <span>My Account</span></a>
               </div>
+                    <!-- mobile view -->
               </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -49,13 +178,13 @@
               <div class="collapse navbar-collapse menu " id="navbarNavDropdown">
                   <ul class="navbar-nav">
                       <li class="nav-item">
-                          <a class="nav-link actived text-white" aria-current="page" href="index.html">HOME</a>
+                          <a class="nav-link actived navColor" aria-current="page" href="index.html">HOME</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="about_us.html">ABOUT</a>
+                          <a class="nav-link navColor" href="about_us.html">ABOUT</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="product_details.html" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle navColor" href="product_details.html" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             PRODUCTS
                         </a>
@@ -66,16 +195,16 @@
                         </ul>
                     </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="FAQ.html">FRESH</a>
+                          <a class="nav-link navColor" href="FAQ.html">FRESH</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="wishList.html">FROZEN</a>
+                          <a class="nav-link navColor" href="wishList.html">FROZEN</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="shoppingCart.html">SHOP</a>
+                          <a class="nav-link navColor" href="shoppingCart.html">SHOP</a>
                       </li>
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+                          <a class="nav-link dropdown-toggle navColor" href="#" id="navbarDropdownMenuLink" role="button"
                               data-bs-toggle="dropdown" aria-expanded="false">
                               PAGE
                           </a>
@@ -86,32 +215,46 @@
                           </ul>
                       </li>
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle text-white" href="blog.html" id="navbarDropdownMenuLink" role="button"
+                          <a class="nav-link dropdown-toggle navColor" href="blog.html" id="navbarDropdownMenuLink" role="button"
                               data-bs-toggle="dropdown" aria-expanded="false">
                               BLOG
                           </a>
                           <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="blog.html">Blog </a></li>
-                              <li><a class="dropdown-item" href="blog-details.html">Blog Details</a></li>
+                              <li><a class="dropdown-item" href="blog.html">Blog</a></li>
+                              <li><a class="dropdown-item" href="blog-details.html">Blog Details </a></li>
                               <li><a class="dropdown-item" href="#">Blog 3</a></li>
                           </ul>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="contact.html">CONTACT</a>
+                          <a class="nav-link navColor" href="contact.html">CONTACT</a>
                       </li>
                   </ul>
                  
               </div>
                <!-- --------------------- -->
-               <div class="profile res_large_device">
-                <a class="text-white overflow_1199" href="#"><i class="fa-brands fa-buffer me-2"></i><span>Best Offer</span></a>
-               <a href="" class="text-white"><span class="ms-2"> | </span>
-                <i class="fa-solid fa-user ms-2"></i>
-                <span>My Account</span></a> 
+               <div class="profile res_large_device d-flex">
+                    <a class="navColor overflow_1199" href="#"><i class="fa-regular fa-star-half-stroke me-1"></i><span>Best Offer</span></a>
+                    <div href="" class="navColor"><span class="ms-2"> | </span>
+                        <!-- <i class="fa-solid fa-user ms-2"></i> -->
+                        <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
+                        <span>My Account</span>
+                    </div> 
               </div>
             <!-- ---------------------- -->
           </div>
       </nav>
+      
+      <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-md">
+            <a class="navbar-brand" href="#">Navbar</a>
+        </div>
+      </nav> -->
+      <div class=" background-res d-flex justify-content-start align-items-center navSubMenu" 
+            style="background-image: url('./assets/img/home-1/001.png');">
+            <div class="container">
+                <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery</span> | Compare</p>
+            </div>
+      </div>
   </section>
 </header>
     <section id="Compare" class="paddingTop">
